// querydsl 추가 1
//buildscript {
//	ext {
//		queryDslVersion = "5.0.0"
//	}
//}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.2isys'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
//	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
//	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// querydsl 추가 2
//	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
//	annotationProcessor(
//			"jakarta.persistence:jakarta.persistence-api",
//			"jakarta.annotation:jakarta.annotation-api",
//			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
}

tasks.named('test') {
	useJUnitPlatform()
}

// querydsl 추가 3
//sourceSets {
//	main {
//		java {
//			srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
//		}
//	}
//}
//
//compileJava.dependsOn('clean')